# lakehouse-dev

./: .env.example  .git-commit-template  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
data-scripts/: .env.example  Makefile  README.md  analyze_data.py  create_iceberg_table.py  pyproject.toml  run_demo.py  run_tests.py  settings.py  test_connection.py
data-scripts/tests/: README.md  __init__.py  test_create_iceberg_table.py  test_settings.py
data-scripts/utils/: __init__.py  cli.py  clients.py
init/: mc.sh
minio-data/.minio.sys/: format.json
minio-data/.minio.sys/tmp/.trash/0b027e12-9750-4f75-9ff7-a317a048803d/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/325694af-51e6-419b-8b88-acb3dda86d44/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/3aceedb2-44cd-4755-9b69-8c90f230c17f/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/45702ed8-5dc8-4e95-928d-89ac5d348727/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/6ad6e441-7813-487f-babb-16d975fc2686/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/6d8c84bc-c78d-4f71-898a-4cf45e1a42c0/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/7490d281-c552-49c0-bbec-0a9e6e46cf4e/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/781be1b0-b916-4055-b1b3-755ab842bb3f/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/79a3051e-7b10-497a-94e8-c4990fab6add/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/7ea1ca90-2c63-43e3-a211-568d0247b32a/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/8a35cde3-2740-4290-b4ad-879e69b72889/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/989be37b-708c-49f6-a67b-fc4631976493/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/b1985f46-80fd-43f3-9847-2c73ab6cc56c/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/b973cfc3-2641-4209-bfa2-3a93bd1ed5c8/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/c00217ae-a791-4466-aaa5-d221cb51ae70/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/c8b24c68-2f0c-4a88-acca-c969eca006ee/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/cd1a3b0d-13ef-4316-8d81-4150fdebc00c/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/cecbc5a8-cadc-4fc9-8788-c1051cddfc7d/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/d413768a-ff68-419a-845e-781bff910589/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/d5984a5b-4661-4929-895c-65bcca05d212/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/ea183338-a52a-4feb-8d34-bd0da24816fb/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/f5a3aa44-71d7-4257-8407-c9458b901bc6/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/f779da8d-2429-49f8-ad17-5c29f6031b6c/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/fa1d6bbd-90ab-4477-9d71-5de5b0790c2c/: xl.meta.bkp
trino/catalog/: iceberg.properties
